{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 54,
  "lineage": "c6fd9349-1ba4-1f30-a49c-3eff8741d6fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:internet-gateway/igw-097c361efb758ec86",
            "id": "igw-097c361efb758ec86",
            "owner_id": "339712822600",
            "tags": {
              "Name": "Prod-IGW"
            },
            "tags_all": {
              "Name": "Prod-IGW"
            },
            "vpc_id": "vpc-0100c5790b7df375b"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577d4511b4a8a0b4",
            "association_id": "eipassoc-02e2b6fcd900a1b4d",
            "connectivity_type": "public",
            "id": "nat-0c616852646e5a020",
            "network_interface_id": "eni-0429714e1162a41ad",
            "private_ip": "10.0.1.173",
            "public_ip": "13.200.166.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07cdaac1324cef565",
            "tags": {
              "Name": "Prod_NAT"
            },
            "tags_all": {
              "Name": "Prod_NAT"
            }
          },
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:route-table/rtb-08045f63da7d523b6",
            "id": "rtb-08045f63da7d523b6",
            "owner_id": "339712822600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c616852646e5a020",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod-pri-RT"
            },
            "tags_all": {
              "Name": "Prod-pri-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0100c5790b7df375b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NAT",
            "aws_subnet.pubsubnet",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:route-table/rtb-01bd816454762d40a",
            "id": "rtb-01bd816454762d40a",
            "owner_id": "339712822600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097c361efb758ec86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod-pub-RT"
            },
            "tags_all": {
              "Name": "Prod-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0100c5790b7df375b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-pro-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9ac12855996cf0f",
            "route_table_id": "rtb-08045f63da7d523b6",
            "subnet_id": "subnet-0dd362e6dfa3c6279"
          },
          "dependencies": [
            "aws_nat_gateway.NAT",
            "aws_route_table.priRT",
            "aws_subnet.prisubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041eba54b1865d035",
            "route_table_id": "rtb-01bd816454762d40a",
            "subnet_id": "subnet-07cdaac1324cef565"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.pubRT",
            "aws_subnet.pubsubnet",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:subnet/subnet-0dd362e6dfa3c6279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd362e6dfa3c6279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712822600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Pri-Sub"
            },
            "tags_all": {
              "Name": "Prod-Pri-Sub"
            },
            "vpc_id": "vpc-0100c5790b7df375b"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:subnet/subnet-07cdaac1324cef565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cdaac1324cef565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712822600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Pub-Sub"
            },
            "tags_all": {
              "Name": "Prod-Pub-Sub"
            },
            "vpc_id": "vpc-0100c5790b7df375b"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712822600:vpc/vpc-0100c5790b7df375b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08193257ab9e3eb37",
            "default_route_table_id": "rtb-0bfbef9ebde8ec189",
            "default_security_group_id": "sg-0e54fdc0fc4e216cc",
            "dhcp_options_id": "dopt-021d07ae83c88015d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0100c5790b7df375b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfbef9ebde8ec189",
            "owner_id": "339712822600",
            "tags": {
              "Name": "Prod-VPC"
            },
            "tags_all": {
              "Name": "Prod-VPC"
            }
          }
        }
      ]
    }
  ]
}